terminando la configuracion del profile
añadiendo la funcion de registrar usuario

añadiendo middleware al carrito de compra para no entrar si no estas logeado

--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -38,7 +38,7 @@
             </article>
             
             <!----------------- CONDICIONAL PARA MOSTRAR LOS BOTONES DE ADMIN ------------------------>
-            <% if ( userLogged.admin && req.originalUrl === '/product/allProducts/productDetail/' + singleProduct.id) { %>
+            <% if ( locals.userLogged && userLogged.admin && req.originalUrl === '/product/allProducts/productDetail/' + singleProduct.id) { %>
                 <article class="botones-admin">
 
                     <button><a href="/product/allProducts/editProduct/<%= singleProduct.id %>">Editar</a></button>
