--- a/public/css/styles-profile.css
+++ b/public/css/styles-profile.css
@@ -60,6 +60,7 @@ section {
     width: 100%;
     height: 100%;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 /* Contenedor de la informacion del usuario */
