--- a/src/views/products/editProduct.ejs
+++ b/src/views/products/editProduct.ejs
@@ -43,23 +43,23 @@
                         <div class="contenedor-categorias">
                             <label for="categories">Categorias:</label>
                             <div>
-                                <input type="checkbox" id="laptops" name="categories" value="laptops" <% if (productToEdit.categories.includes('laptops')) { %>checked<% } %>>
+                                <input type="checkbox" id="laptops" name="categories" value="laptops" <% if (productToEdit.categories.some(category => category.name.includes('laptops'))) { %>checked<% } %>>
                                 <label for="laptops">Laptops</label>
                             </div>
                             <div>
-                                <input type="checkbox" id="oficina" name="categories" value="oficina" <% if (productToEdit.categories.includes('oficina')) { %>checked<% } %>>
+                                <input type="checkbox" id="oficina" name="categories" value="oficina" <% if (productToEdit.categories.some(category => category.name.includes('oficina'))) { %>checked<% } %>>
                                 <label for="oficina">Oficina</label>
                             </div>
                             <div>
-                                <input type="checkbox" id="estudiantes" name="categories" value="estudiantes" <% if (productToEdit.categories.includes('estudiantes')) { %>checked<% } %>>
+                                <input type="checkbox" id="estudiantes" name="categories" value="estudiantes" <% if (productToEdit.categories.some(category => category.name.includes('estudiantes'))) { %>checked<% } %>>
                                 <label for="estudiantes">Estudiantes</label>
                             </div>
                             <div>
-                                <input type="checkbox" id="accesorios" name="categories" value="accesorios" <% if (productToEdit.categories.includes('accesorios')) { %>checked<% } %>>
+                                <input type="checkbox" id="accesorios" name="categories" value="accesorios" <% if (productToEdit.categories.some(category => category.name.includes('accesorios'))) { %>checked<% } %>>
                                 <label for="accesorios">Accesorios</label>
                             </div>
                             <div>
-                                <input type="checkbox" id="gamer" name="categories" value="gamer" <% if (productToEdit.categories.includes('gamer')) { %>checked<% } %>>
+                                <input type="checkbox" id="gamer" name="categories" value="gamer" <% if (productToEdit.categories.some(category => category.name.includes('gamer'))) { %>checked<% } %>>
                                 <label for="gamer">Gamer</label>
                             </div>
                         </div>
