Corrigiendo processEdit de productController.js
Corrigiendo linea editProduct.ejs

--- a/src/views/products/editProduct.ejs
+++ b/src/views/products/editProduct.ejs
@@ -17,7 +17,7 @@
 
             <!-------------- FORMULARIO --------------------->
             <div class="contenedor-formulario">
-                <form action="/product/editProduct/<%= productToEdit.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+                <form action="/product/allProducts/editProduct/<%= productToEdit.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                     <div class="contenedor-inputs">
                         <div>
                             <label for="name">Nombre del producto:</label>
