--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,6 +19,17 @@
         </article>
 
         <!------------------ LOGIN Y REGISTER --------------------->
+        <article class="favorites-icon">
+            <button class="switch" id = "switch">
+                <span>
+                    <i class="fa-solid fa-sun"></i>
+                </span>
+                <span>
+                    <i class="fa-solid fa-moon"></i>
+                </span>
+
+            </button>
+        </article>
         <% if ( locals.userLogged ) { %>
             <article class="login-icon-logged">
                 <a href="/user/login"><i class="fa-solid fa-user"></i></a>
