--- a/public/css/styles-header-footer.css
+++ b/public/css/styles-header-footer.css
@@ -95,6 +95,46 @@ header {
         display: none;
     }
 
+    .switch{
+        background-color: rgba(0, 31, 84, 0.5);;
+        border: none;
+        outline: none;
+        border-radius: 100px;
+        position: relative;
+        /* background-color: rgba(0, 31, 84, 0.49); */
+    }
+    span {
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        display: inline-block;
+        background: none;
+        color: #f5f5f5;
+    }
+
+    .switch::after {
+        content:"";
+        display: block;
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        background-color: white;
+        top: 0;
+        left: 0;
+        right: unset;
+        border-radius: 100px;
+        transition: .3s ease all;
+        box-shadow: 0px 0px 4px rgba(0, 0, 0, .8);
+    }
+    .switch.active{
+        background: #92DCE5;
+        /* background-color: rgba(146, 220, 229, 0.7) */
+    }
+    .switch.active::after {
+        right: 0;
+        left: unset;
+    }
+
     /*-----------  BARRA DE NAVEGACION -------------*/
 
     .nav-categorias {
