Creando vista para restablecer contraseña

--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -29,7 +29,7 @@
                     <% } %>
 
                     <!----------------- LINKS DEL FORMULARIO ------------------------>
-                    <p><a href="">¿Olvidaste tu contraseña?</a> | <a href="/user/register">Crear cuenta</a></p>
+                    <p><a href="/user/restPassword">¿Olvidaste tu contraseña?</a> | <a href="/user/register">Crear cuenta</a></p>
 
                     <!----------------- BOTON PARA ENVIAR EL FORMULARIO ------------------------>
                     <button type="submit" class="acceder">Acceder</button>
