Agregando carpeta scripts

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -22,4 +22,9 @@
 
     <!-- ICONOS -->
     <script src="https://kit.fontawesome.com/3f4ccc7b29.js" crossorigin="anonymous"></script>
+
+    <!-- Script dark / light mode -->
+    <script src="/scripts/darkMode.js">
+        
+    </script>
 </head>
