--- a/src/views/user/restPassword.ejs
+++ b/src/views/user/restPassword.ejs
@@ -1,5 +1,3 @@
-<!-- Paritials head -->
- 
 <%- include('../partials/head.ejs', { extraFont: "https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap", stylesheetPath: "/css/styles-register.css" }) %>
 
 <body>
@@ -8,50 +6,36 @@
 
     <main>
         
-        <!----------------- FORMULARIO DE REGISTRO ------------------------>
+        <!----------------- FORMULARIO DE RESTABLECIMIENTO DE PASSWORD ------------------------>
         <section class="fondo-register">
             <article class="contenedor-register">
-                <form action="/user/register" method="post">
+                <form action="/user/restPassword" method="post">
 
                     <!----------------- TITULO DEL FORMULARIO ------------------------>
-                    <label class="titulo-register">Registrarse</label>
+                    <label class="titulo-register">Restablecer contraseña</label>
 
                     <!----------------- CAMPOS DEL FORMULARIO ------------------------>
-                    <label for="user">Usuario</label>
-                    <input type="text" id="user" name="user" value="<%= locals.oldData ? oldData.user : null %>">
-                    <% if (locals.errors && errors.user) { %>
-                        <div class="error">* <%= errors.user.msg %></div>
-                    <% } %>
-                    
-                    <label for="email">Email</label>
-                    <input type="text" id="email" name="email" value="<%= locals.oldData ? oldData.email : null %>">
-                    <% if (locals.errors && errors.email) { %>
-                        <div class="error">* <%= errors.email.msg %></div>
+                    <label for="identifier">Usuario o email</label>
+                    <input type="text" id="identifierRest" name="identifierRest">
+                    <% if (locals.errors && errors.identifierRest) { %>
+                        <div class="error">* <%= errors.identifierRest.msg %></div>
                     <% } %>
 
-                    <label for="password">Contraseña</label>
-                    <input type="password" id="password" name="password" value="<%= locals.oldData ? oldData.password : null %>">
-                    <% if (locals.errors && errors.password) { %>
-                        <div class="error">* <%= errors.password.msg %></div>
-                    <% } %>
-
-                    <label for="repassword">Confirmar contraseña</label>
-                    <input type="password" id="repassword" name="repassword" value="<%= locals.oldData ? oldData.repassword : null %>">
-                    <% if (locals.errors && errors.repassword) { %>
-                        <div class="error">* <%= errors.repassword.msg %></div>
-                    <% } %>
+                    <!----------------- CAMPOS DEL FORMULARIO ------------------------>
+                    <label for="password">Codigo de restablecimiento</label>
+                    <input type="password" id="password-rest" name="password-rest" value="">
 
                     <!----------------- VOLVER A LA PAGINA DE LOGIN ------------------------>
                     <a href="/user/login">¿Ya tienes cuenta? Ingresa</a>
 
                     <!----------------- BOTON DE REGISTRARSE ------------------------>
-                    <button type="submit" class="registrarse">Registrarse</button>
+                    <button type="submit" class="registrarse">Enviar codigo</button>
                 </form>
             </article>
 
             <!----------------- FRASE PARA RECIBIR A LOS USUARIOS QUE SE REGISTRAN ------------------------>
             <article class="frase-register">
-                <p>Explora un mar de posibilidades tecnológicas al abrir la puerta a nuestro mundo digital.</p>
+                <p>Recupera el acceso a tu cuenta y continúa explorando nuestro mundo digital.</p>
             </article>
         </section>
     </main>
