--- a/src/views/products/editProduct.ejs
+++ b/src/views/products/editProduct.ejs
@@ -1,99 +1,107 @@
 <!-- Paritials head -->
 
-<%- include('../partials/head.ejs', { extraFont: "https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap", stylesheetPath: "/css/styles-editProduct.css" }) %>
+<%- include('../partials/head.ejs', { extraFont: "https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" ,
+    stylesheetPath: "/css/styles-editProduct.css" }) %>
 
-<body>
-    <!--Partials header  -->
-    <%- include('../partials/header.ejs') %>
-    
-    <main>
-        <div class="contenedor-principal">
+    <body>
+        <!--Partials header  -->
+        <%- include('../partials/header.ejs') %>
 
-            <!--------- TITULO DEL FORMULARIO ----------->
-            <div class="contenedor-titulo">
-                <h2>Edición de producto</h2>
-            </div>
+            <main>
+                <div class="contenedor-principal">
 
-
-            <!-------------- FORMULARIO --------------------->
-            <div class="contenedor-formulario">
-                <form action="/product/allProducts/editProduct/<%= productToEdit.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
-                    <div class="contenedor-inputs">
-                        <div>
-                            <label for="name">Nombre del producto:</label>
-                            <input type="text" id="name" name="name" placeholder="Ej: Smartwatch Amazfit Bip 3 Pink" value="<%= productToEdit.name %>">
-                        </div>
-                            
-                        <div>
-                            <label for="price">Precio del producto:</label>
-                            <input type="text" id="price" name="price" placeholder="Ej: 5678" value="<%= productToEdit.price %>">
-                        </div>
-
-                        <div>
-                            <label for="discount">Descuento:</label>
-                            <input type="text" id="discount" name="discount" placeholder="Ej: 15" value="<%= productToEdit.discount %>"> 
-                        </div>
-
-                        <div>
-                            <label for="brand">Marca:</label>
-                            <input type="text" id="brand" name="brand" placeholder="Ej: Lenovo" value="<%= productToEdit.brand %>">
-                        </div>
-
-                        <!------------ CHECKBOX DE LAS CATEGORIAS ---------------->
-                        <div class="contenedor-categorias">
-                            <label for="categories">Categorias:</label>
-                            <div>
-                                <input type="checkbox" id="laptops" name="categories" value="laptops" <% if (productToEdit.categories.some(category => category.name.includes('laptops'))) { %>checked<% } %>>
-                                <label for="laptops">Laptops</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" id="oficina" name="categories" value="oficina" <% if (productToEdit.categories.some(category => category.name.includes('oficina'))) { %>checked<% } %>>
-                                <label for="oficina">Oficina</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" id="estudiantes" name="categories" value="estudiantes" <% if (productToEdit.categories.some(category => category.name.includes('estudiantes'))) { %>checked<% } %>>
-                                <label for="estudiantes">Estudiantes</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" id="accesorios" name="categories" value="accesorios" <% if (productToEdit.categories.some(category => category.name.includes('accesorios'))) { %>checked<% } %>>
-                                <label for="accesorios">Accesorios</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" id="gamer" name="categories" value="gamer" <% if (productToEdit.categories.some(category => category.name.includes('gamer'))) { %>checked<% } %>>
-                                <label for="gamer">Gamer</label>
-                            </div>
-                        </div>
-
-                        <div class="contenedor-imagen">
-                            <label for="image">Imagen:</label>
-                            <input type="file" id="image" name="image">
-                        </div>
-
-                        <div>
-                            <label for="status">Estado:</label>
-                            <select name="status" id="status">
-                                <option value="" <% if (productToEdit.status === "") { %>selected<% } %>>Ninguno</option>
-                                <option value="featured" <% if (productToEdit.status === 'featured') { %>selected<% } %>>Producto destacado</option>
-                                <option value="in-sale" <% if (productToEdit.status === 'in-sale') { %>selected<% } %>>Producto en oferta</option>
-                            </select>
-                        </div>
-
-                        <div>
-                            <label for="description">Descripción:</label>
-                            <textarea name="description" id="description"><%= productToEdit.description %></textarea>
-                        </div>
-
-                        <div class="boton-guardar">
-                            <button type="submit">Guardar producto</button>
-                        </div>
+                    <!--------- TITULO DEL FORMULARIO ----------->
+                    <div class="contenedor-titulo">
+                        <h2>Edición de producto</h2>
                     </div>
-                </form>
-            </div>
-        </div>
-    </main>
 
-    <!--Partials footer  -->
-    <%- include('../partials/footer.ejs') %>
 
-</body>
-</html>
+                    <!-------------- FORMULARIO --------------------->
+                    <div class="contenedor-formulario">
+                        <form action="/product/allProducts/editProduct/<%= productToEdit.id %>?_method=PUT"
+                            method="POST" enctype="multipart/form-data">
+                            <div class="contenedor-inputs">
+                                <div>
+                                    <label for="name">Nombre del producto:</label>
+                                    <input type="text" id="name" name="name"
+                                        placeholder="Ej: Smartwatch Amazfit Bip 3 Pink"
+                                        value="<%= productToEdit.name %>">
+                                </div>
+
+                                <div>
+                                    <label for="price">Precio del producto:</label>
+                                    <input type="text" id="price" name="price" placeholder="Ej: 5678"
+                                        value="<%= productToEdit.price %>">
+                                </div>
+
+                                <div>
+                                    <label for="discount">Descuento:</label>
+                                    <input type="text" id="discount" name="discount" placeholder="Ej: 15"
+                                        value="<%= productToEdit.discount %>">
+                                </div>
+
+                                <div>
+                                    <label for="brand">Marca:</label>
+                                    <select name="brand" id="brand">
+                                        <% brands.forEach(element=> { %>
+                                            <option value="<%= element.id %>" <% if (element.id==productToEdit.brand_id)
+                                                { %>selected<% } %>><%= element.name %>
+                                            </option>
+                                            <% }) %>
+                                    </select>
+                                </div>
+
+                                <!------------ CHECKBOX DE LAS CATEGORIAS ---------------->
+                                <div class="contenedor-categorias">
+                                    <label for="categories">Categorias:</label>
+                                    <% categories.forEach(category=> { %>
+                                        <div>
+                                            <input type="checkbox" id="<%= category.name %>" name="categories"
+                                                value="<%= category.id %>" <% if
+                                                (productToEdit.categories.some(productCategory=> productCategory.id == category.id)) { %> checked <% } %>>
+                                                <label for="<%= category.name %>">
+                                                    <%= category.name %>
+                                                </label>
+                                        </div>
+                                        <% }) %>
+                                </div>
+
+                                <div class="contenedor-imagen">
+                                    <label for="image">Imagen:</label>
+                                    <input type="file" id="image" name="image">
+                                </div>
+
+
+                                <div>
+                                    <label for="status">Estado:</label>
+                                    <select name="status" id="status">
+                                        <% status.forEach(element=> { %>
+                                            <option value="<%= element.id %>" <% if
+                                                (element.id==productToEdit.status_id) { %>selected<% } %>><%=
+                                                        element.name %>
+                                            </option>
+                                            <% }) %>
+                                    </select>
+                                </div>
+
+                                <div>
+                                    <label for="description">Descripción:</label>
+                                    <textarea name="description"
+                                        id="description"><%= productToEdit.description %></textarea>
+                                </div>
+
+                                <div class="boton-guardar">
+                                    <button type="submit">Guardar producto</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </main>
+
+            <!--Partials footer  -->
+            <%- include('../partials/footer.ejs') %>
+
+    </body>
+
+    </html>
