--- a/src/views/products/newProduct.ejs
+++ b/src/views/products/newProduct.ejs
@@ -21,17 +21,26 @@
                     <div class="contenedor-inputs">
                         <div>
                             <label for="name">Nombre del producto:</label>
-                            <input type="text" id="name" name="name" placeholder="Ej: Smartwatch Amazfit Bip 3 Pink">
+                            <input type="text" id="name" name="name" placeholder="Ej: Smartwatch Amazfit Bip 3 Pink" value="<%= locals.oldData ? oldData.name : null %>">
+                            <% if (locals.errors && errors.name) { %>
+                                <div class="error">* <%= errors.name.msg %></div>
+                            <% } %>
                         </div>
                             
                         <div>
                             <label for="price">Precio del producto:</label>
-                            <input type="text" id="price" name="price" placeholder="Ej: 5678">
+                            <input type="text" id="price" name="price" placeholder="Ej: 5678" value="<%= locals.oldData ? oldData.price : null %>">
+                            <% if (locals.errors && errors.price) { %>
+                                <div class="error">* <%= errors.price.msg %></div>
+                            <% } %>
                         </div>
 
                         <div>
                             <label for="discount">Descuento:</label>
-                            <input type="text" id="discount" name="discount" placeholder="Ej: 15">
+                            <input type="text" id="discount" name="discount" placeholder="Ej: 15" value="<%= locals.oldData ? oldData.discount : null %>">
+                            <% if (locals.errors && errors.discount) { %>
+                                <div class="error">* <%= errors.discount.msg %></div>
+                            <% } %>
                         </div>
 
                         <div>
@@ -54,11 +63,17 @@
                                 </div>
 
                             <% }) %>
+                            <% if (locals.errors && errors.categories) { %>
+                                <div class="error">* <%= errors.categories.msg %></div>
+                            <% } %>
                         </div>
 
                         <div class="contenedor-imagen">
                             <label for="image">Imagen:</label>
-                            <input type="file" id="image" name="image" required>
+                            <input type="file" id="image" name="image">
+                            <% if (locals.errors && errors.image) { %>
+                                <div class="error">* <%= errors.image.msg %></div>
+                            <% } %>
                         </div>
 
                         <div>
@@ -73,7 +88,10 @@
 
                         <div>
                             <label for="description">Descripción:</label>
-                            <textarea name="description" id="description"></textarea>
+                            <textarea name="description" id="description"><%= locals.oldData ? oldData.description : null %></textarea>
+                            <% if (locals.errors && errors.description) { %>
+                                <div class="error">* <%= errors.description.msg %></div>
+                            <% } %>
                         </div>
 
                         <div class="boton-guardar">
